*SVN*

* Changed those private ActiveRecord methods to take optional third argument :auto instead of nil for performance optimizations.  (closes #4456) [Stefan]

* Private ActiveRecord methods add_limit!, add_joins!, and add_conditions! take an OPTIONAL third argument 'scope' (closes #4456) [Rick]

* DEPRECATED: Using additional attributes on has_and_belongs_to_many associations. Instead upgrade your association to be a real join model [DHH]

* Fixed that records returned from has_and_belongs_to_many associations with additional attributes should be marked as read only (fixes #4512) [DHH]

* Do not implicitly mark recordss of has_many :through as readonly but do mark habtm records as readonly (eventually only on join tables without rich attributes). [Marcel Mollina Jr.]

* Fixed broken OCIAdapter #4457 [schoenm@earthlink.net]


*1.14.0* (March 27th, 2005)

* Replace 'rescue Object' with a finer grained rescue. Closes #4431. [Nicholas Seckar]

* Fixed eager loading so that an aliased table cannot clash with a has_and_belongs_to_many join table [Rick]

* Add support for :include to with_scope [andrew@redlinesoftware.com]

* Support the use of public synonyms with the Oracle adapter; required ruby-oci8 v0.1.14 #4390 [schoenm@earthlink.net]

* Change periods (.) in table aliases to _'s.  Closes #4251 [jeff@ministrycentered.com]

* Changed has_and_belongs_to_many join to INNER JOIN for Mysql 3.23.x.  Closes #4348 [Rick]

* Fixed issue that kept :select options from being scoped [Rick]

* Fixed db_schema_import when binary types are present #3101 [DHH]

* Fixed that MySQL enums should always be returned as strings #3501 [DHH]

* Change has_many :through to use the :source option to specify the source association.  :class_name is now ignored. [Rick Olson]

    class Connection < ActiveRecord::Base
      belongs_to :user
      belongs_to :channel
    end

    class Channel < ActiveRecord::Base
      has_many :connections